--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     },
     "author": {
         "name": "mfhubz",
-        "email": "mfhubz@gmail.com",
-        "url": "http://www.mfhubz.com/"
+        "email": "mfhubz@gmail.com"
     },
     "licenses": [
         {
