--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-    "name": "typeof",
+    "name": "typeof-ext",
     "version": "0.0.1",
     "description": "A node.js module to get, compare and check types",
     "keywords": [
-        "node.js",
         "typeof",
         "isFunction",
         "isObject",
@@ -19,7 +18,7 @@
     ],
     "repository": {
         "type": "git",
-        "url": "git://github.com/mfhubz/typeof.git"
+        "url": "https://github.com/mfhubz/typeof-ext.git"
     },
     "author": {
         "name": "mfhubz",
